--- a/src/templates/fields/palette/input.twig
+++ b/src/templates/fields/palette/input.twig
@@ -61,7 +61,7 @@
 
 	{% else %}
 
-		<input type="hidden" name="{{ name }}[custom]" value="" />
+		<input id="{{ id }}-custom"  type="hidden" name="{{ name }}[custom]" value="" />
 
 	{% endif %}
 
