--- a/src/templates/fields/palette/settings.twig
+++ b/src/templates/fields/palette/settings.twig
@@ -5,8 +5,8 @@
 {% if not global %}
 
     {{ forms.lightswitchField({
-        label: "Global Settings"|t('styleit'),
-        instructions: "Use the global settings defined in your plugin settings"|t('styleit'),
+        label: "Global Settings"|t('palette'),
+        instructions: "Use the global settings defined in your plugin settings"|t('palette'),
         id: 'useGlobalSettings',
         name: 'useGlobalSettings',
         on: field.useGlobalSettings,
@@ -21,7 +21,7 @@
 
     {{ forms.editableTableField({
         label: 'Palette Colours',
-        instructions : 'Set the palette colours, these can be changed at any time.'|t('styleit'),
+        instructions : 'Set the palette colours, these can be changed at any time.'|t('palette'),
         id: 'paletteColours',
         rows: 4,
         textual: false,
@@ -52,18 +52,18 @@
     #}
 
     {{ forms.checkboxSelectField({
-        label: "Base Colours"|t('styleit'),
-        instructions: "Select any base colours that you would like to include in your palette field."|t('styleit'),
+        label: "Base Colours"|t('palette'),
+        instructions: "Select any base colours that you would like to include in your palette field."|t('palette'),
         id: 'paletteBaseColours',
         name: 'paletteBaseColours',
-        options: craft.styleit.baseColoursAsOptions,
+        options: craft.palette.baseColoursAsOptions,
         values: field.paletteBaseColours,
         errors: field.getErrors('paletteBaseColours')
     })}}
 
     {{ forms.lightswitchField({
-        label: "Opacity"|t('styleit'),
-        instructions: "Allow the user to set opacty on this palette field."|t('styleit'),
+        label: "Opacity"|t('palette'),
+        instructions: "Allow the user to set opacty on this palette field."|t('palette'),
         id: 'allowOpacity',
         name: 'allowOpacity',
         on: field.allowOpacity,
@@ -71,8 +71,8 @@
     }) }}
 
     {{ forms.lightswitchField({
-        label: "Custom Colour"|t('styleit'),
-        instructions: "Allow the user to set a custom colour hex for this palette field."|t('styleit'),
+        label: "Custom Colour"|t('palette'),
+        instructions: "Allow the user to set a custom colour hex for this palette field."|t('palette'),
         id: 'allowCustomColour',
         name: 'allowCustomColour',
         on: field.allowCustomColour,
@@ -80,8 +80,8 @@
     }) }}
 
     {{ forms.selectField({
-        label: "Colour Output"|t('styleit'),
-        instructions: "Select the default colour output you would like to return."|t('styleit'),
+        label: "Colour Output"|t('palette'),
+        instructions: "Select the default colour output you would like to return."|t('palette'),
         id: 'colourFormat',
         name: 'colourFormat',
         options: {
@@ -101,7 +101,7 @@
     <div id="{{ field.id }}-global" class="{{ not field.useGlobalSettings ? 'hidden' }}">
 
         {{ field.inputPreviewHtml | raw }}
-        <p><a href="{{ cpUrl('settings/plugins/styleit') }}">Update Global Settings</a></p>
+        <p><a href="{{ cpUrl('settings/plugins/palette') }}">Update Global Settings</a></p>
 
     </div>
 
