--- a/src/templates/settings/presets/_edit.twig
+++ b/src/templates/settings/presets/_edit.twig
@@ -5,9 +5,38 @@
 
 	<h2>{{ "Edit Preset"|t('palette') }}</h2>
 
-	{# {% namespace 'palette' %}
-		{{ palette.settingsHtml | raw }}
-	{% endnamespace %}
+ 	<form action="" method="post" accept-charset="UTF-8">
+
+        <input type="hidden" name="action" value="plugins/save-plugin-settings">
+		<input type="hidden" name="pluginHandle" value="palette">
+        {{ redirectInput('palette/settings/general') }}
+        {{ csrfInput() }}
+
+        {% namespace 'settings' %}
+
+        	{{ forms.textField({
+	            label: 'Name'|t('palette'),
+	            instructions: 'Give a name to these preset field settings '|t('palette'),
+	            id: 'pluginName',
+	            name: 'pluginName',
+	            placeholder: '',
+	            value: '',
+	            errors: false,
+	            first: true
+	        }) }}
+
+	        <hr>
+
+			{# {{ palette.settingsHtml | raw }} #}
+
+	        <input type="submit" class="btn submit" value="{{ 'Save'|t('palette') }}">
+
+		{% endnamespace %}
+
+    </form>
+
+
+	{#
 
 	 #}
 {% endblock %}
