--- a/src/templates/settings/general/index.twig
+++ b/src/templates/settings/general/index.twig
@@ -3,6 +3,8 @@
 
 {% block content %}
 
+    <h2>{{ "Field Templates"|t('palette') }}</h2>
+
  	<form action="" method="post" accept-charset="UTF-8">
 
         <input type="hidden" name="action" value="plugins/save-plugin-settings">
