About Page + Progress

--- a/src/templates/_layouts/main.twig
+++ b/src/templates/_layouts/main.twig
@@ -3,6 +3,7 @@
 {% set title = "Palette"|t('palette') %}
 
 {% set navItems = {
+    'about': { title: "About Palette"|t('palette') },
     'settings': { heading: "Settings"|t('palette') },
     'settings/general': { title: "General"|t('palette') },
     'settings/fieldtemplates': { title: "Field Templates"|t('palette') },
