--- a/src/templates/settings/fieldtemplates/_edit.twig
+++ b/src/templates/settings/fieldtemplates/_edit.twig
@@ -3,13 +3,12 @@
 
 {% block content %}
 
-{{d(fieldTemplate.getErrors())}}
-
  	<form action="" method="post" accept-charset="UTF-8">
 
         <input type="hidden" name="action" value="palette/field-templates/save">
-        {% if fieldTemplate.id %}
-        	<input type="hidden" name="id" value="{{ fieldTemplate.id }}">
+
+        {% if not isNewFieldTemplate %}
+        	<input type="hidden" name="fieldTemplateId" value="{{ fieldTemplate.id }}">
             <input type="hidden" name="type" value="{{ fieldTemplate.type }}">
         {% endif %}
 
@@ -27,55 +26,47 @@
             first: true
         }) }}
 
-        {% if fieldTemplate.id %}
+        {% if isNewFieldTemplate %}
 
-            {% namespace 'settings' %}
-                {{ fieldTemplate.field.settingsHtml|raw }}
-            {% endnamespace %}
+            {{ forms.selectField({
+                label: "Field Type"|t('app'),
+                instructions: "Which field do you want to create a template for?"|t('palette'),
+                id: 'type',
+                name: 'type',
+                options: fieldTemplateTypeOptions,
+                value: fieldTemplate.type,
+                toggle: true
+            }) }}
+
+            <hr>
+
+            {% for type in allFieldTemplatesTypes %}
+
+                {% set isCurrent = (not fieldTemplate.type and loop.first) or (fieldTemplate.type == type) %}
+                <div id="{{ type|id }}"{% if not isCurrent %} class="hidden"{% endif %}>
+                    {% namespace 'types['~type~']' %}
+
+                        {% set _fieldType = fieldTemplate.type and isCurrent ? fieldTemplate.getField() : craft.palette.fieldTemplates.getFieldTemplateField(type) %}
+
+                        {{ fieldTemplate.getFieldSettingsHtml()|raw }}
+
+                    {% endnamespace %}
+                </div>
+
+            {% endfor %}
 
         {% else %}
 
-            <input type="hidden" name="type" value="fruitstudios\palette\fields\PaletteFieldTemplate">
-
-
-            <p> Field type select of fields avaible for this plugin</p>
-
-        {% endif %}
-
-
- {#        {% if isNew %}
-
-
-        {% endif %}
-
-
-        {{ forms.selectField({
-            label: "Field Type"|t('app'),
-            instructions: "What type of field is this?"|t('app'),
-            warning: (fieldId is not empty and not field.hasErrors('type') ? "Changing this may result in data loss."|t('app')),
-            id: 'type',
-            name: 'type',
-            options: fieldTypeOptions,
-            value: className(field),
-            toggle: true
-        }) }}
-
-        <input type="hidden" name="type" value="{{ fieldTemplate.type }}">
-#}
-
-        {# {% if fieldTemplate.field %}
-            {% namespace 'settings' %}
-
-                {{ fieldTemplate.field.settingsHtml | raw }}
-
+            {% namespace 'types['~fieldTemplate.type~']' %}
+                {{ fieldTemplate.getFieldSettingsHtml()|raw }}
             {% endnamespace %}
-        {% endif %} #}
 
-
-
+        {% endif %}
 
         <input type="submit" class="btn submit" value="{{ 'Save'|t('palette') }}">
 
     </form>
+
+    <hr>
 
 {% endblock %}
