--- a/src/templates/_layouts/base.html
+++ b/src/templates/_layouts/base.html
@@ -1,6 +1,9 @@
 {% extends '_layouts/cp' %}
+{% do view.registerAssetBundle("fruitstudios\\palette\\web\\assets\\palette\\PaletteAssetBundle") %}
 
 {#
+	Tabs
+
 	{% set hideTabs = hideTabs ?? false %}
 	{% if not hideTabs %}
 	    {% set tabs = {
