--- a/src/templates/_fields/palette/preview.twig
+++ b/src/templates/_fields/palette/preview.twig
@@ -1,6 +1,6 @@
 {% import "_includes/forms" as forms %}
 
-{% set custom = '#cc5643' %}
+{% set custom = '#cccccc' %}
 {% set opacity = 100 %}
 
 <div class="palette--palette flex">
