--- a/src/templates/settings/fieldtemplates/index.twig
+++ b/src/templates/settings/fieldtemplates/index.twig
@@ -1,8 +1,6 @@
 {% extends "palette/_layouts/main" %}
 {% import "_includes/forms" as forms %}
 
-{% set inuse = '<p><a>TestField</a>, <a>Another Field</a>, <a>This Field</a></p>' %}
-
 {% block content %}
 
     {# <h2>{{ "Field Templates"|t('palette') }}</h2> #}
@@ -28,8 +26,8 @@
                 {% for fieldTemplate in fieldTemplates %}
                     <tr data-id="{{ fieldTemplate.id }}" data-name="{{ fieldTemplate.name }}">
                         <th scope="row" data-title="{{ 'Name'|t('palette') }}"><a href="{{ url('palette/settings/fieldtemplates/'~fieldTemplate.id) }}">{{ fieldTemplate.name }}</a></th>
-                        <td data-title="{{ 'Type'|t('commerce') }}">{{ fieldTemplate.fieldType.displayName }}</td>
-                        <td data-title="{{ 'Fields'|t('commerce') }}">{{ inuse|raw }}</td>
+                        <td data-title="{{ 'Type'|t('palette') }}">{{ fieldTemplate.fieldType.displayName }}</td>
+                        <td data-title="{{ 'Fields'|t('palette') }}">{{ fieldTemplate.getFieldsUsingHtml()|raw }}</td>
                         <td class="thin"><a class="delete icon" title="{{ 'Delete'|t('palette') }}" role="button"></a></td>
                     </tr>
                 {% endfor %}
